; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_chip.c_mv88e6xxx_alloc_chip.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_chip.c_mv88e6xxx_alloc_chip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv88e6xxx_chip = type { i32, i32, i32, %struct.device* }
%struct.device = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.mv88e6xxx_chip* (%struct.device*)* @mv88e6xxx_alloc_chip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.mv88e6xxx_chip* @mv88e6xxx_alloc_chip(%struct.device* %0) #0 {
  %2 = alloca %struct.mv88e6xxx_chip*, align 8
  %3 = alloca %struct.device*, align 8
  %4 = alloca %struct.mv88e6xxx_chip*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  %5 = load %struct.device*, %struct.device** %3, align 8
  %6 = load i32, i32* @GFP_KERNEL, align 4
  %7 = call %struct.mv88e6xxx_chip* @devm_kzalloc(%struct.device* %5, i32 24, i32 %6)
  store %struct.mv88e6xxx_chip* %7, %struct.mv88e6xxx_chip** %4, align 8
  %8 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %9 = icmp ne %struct.mv88e6xxx_chip* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store %struct.mv88e6xxx_chip* null, %struct.mv88e6xxx_chip** %2, align 8
  br label %25

11:                                               ; preds = %1
  %12 = load %struct.device*, %struct.device** %3, align 8
  %13 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %14 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %13, i32 0, i32 3
  store %struct.device* %12, %struct.device** %14, align 8
  %15 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %16 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %15, i32 0, i32 2
  %17 = call i32 @mutex_init(i32* %16)
  %18 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %19 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %18, i32 0, i32 1
  %20 = call i32 @INIT_LIST_HEAD(i32* %19)
  %21 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  %22 = getelementptr inbounds %struct.mv88e6xxx_chip, %struct.mv88e6xxx_chip* %21, i32 0, i32 0
  %23 = call i32 @idr_init(i32* %22)
  %24 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %4, align 8
  store %struct.mv88e6xxx_chip* %24, %struct.mv88e6xxx_chip** %2, align 8
  br label %25

25:                                               ; preds = %11, %10
  %26 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %2, align 8
  ret %struct.mv88e6xxx_chip* %26
}

declare dso_local %struct.mv88e6xxx_chip* @devm_kzalloc(%struct.device*, i32, i32) #1

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @idr_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
